--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <h3>7.2 Order View Interface</h3>
             <p><strong>Top-Level Status Filter:</strong></p>
             <p>Current:</p>
-            <img src="current.png" alt="Description of image" />
+            <img src="current.png" style="width:900px" alt="Description of image" />
             <ul>
                 <li>Includes all status options except archived statuses</li>
                 <li>Archived button combines:
@@ -382,7 +382,7 @@
 
             <p><strong>Secondary Filters:</strong></p>
             <p>Current:</p>
-            <img src="current2.png" alt="Description of image" />
+            <img src="current2.png" style="width:900px" alt="Description of image" />
             <ul>
                 <li>Order Number</li>
                 <li>Servicing Account
